--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main id="main-ss">
         <div class="particles" id="particles"></div>
         <header id="header-con">
-            <div class="left-container">
+            <div class="left-container" data-aos="slide-right">
                 <div class="logo">
                     <img src="\assets\images\logo.png" alt="logo">
                 </div>
@@ -42,7 +42,7 @@
                     </nav>
                 </div>
             </div>
-            <div class="right-container">
+            <div class="right-container" data-aos="slide-left">
                 <div class="search-con">
                     <form action="">
                         <input id="search-input" type="text" name="search" placeholder="ค้นหาสินค้า">
@@ -96,7 +96,7 @@
         </section>
         <section class="hero-section">
             <div class="hero-content">
-                <div class="hero-text" data-aos="fade-up" data-aos-duration="2000">
+                <div class="hero-text" data-aos="slide-up" data-aos-duration="2000">
                     <h1>U-Design</h1>
                     <div class="subtitle">บริษัท เเอทไซน์ มีเดีย พลัส</div>
                     <p>คุณกำลังมองหาป้ายที่ไม่เหมือนใคร สะท้อนตัวตน หรือเติมเต็มพื้นที่ให้มีสไตล์อยู่หรือเปล่า?
@@ -121,6 +121,54 @@
                 <p>เราให้บริการออกแบบและผลิตป้ายโฆษณาครบวงจร ด้วยคุณภาพและความใส่ใจในทุกรายละเอียด</p>
             </div>
             <div id="product-item" class="product-item">
+                <a href="/service.html" class="product-item-con">
+                    <div class="product-item-con-image">
+                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg" alt="product-item-1">
+                    </div>
+                    <div class="product-item-con-text">
+                        <h3>ป้ายโฆษณา</h3>
+                    </div>
+                </a>
+                <a href="/service.html" class="product-item-con">
+                    <div class="product-item-con-image">
+                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg" alt="product-item-1">
+                    </div>
+                    <div class="product-item-con-text">
+                        <h3>ป้ายโฆษณา</h3>
+                    </div>
+                </a>
+                <a href="/service.html" class="product-item-con">
+                    <div class="product-item-con-image">
+                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg" alt="product-item-1">
+                    </div>
+                    <div class="product-item-con-text">
+                        <h3>ป้ายโฆษณา</h3>
+                    </div>
+                </a>
+                <a href="/service.html" class="product-item-con">
+                    <div class="product-item-con-image">
+                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg" alt="product-item-1">
+                    </div>
+                    <div class="product-item-con-text">
+                        <h3>ป้ายโฆษณา</h3>
+                    </div>
+                </a>
+                <a href="/service.html" class="product-item-con">
+                    <div class="product-item-con-image">
+                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg" alt="product-item-1">
+                    </div>
+                    <div class="product-item-con-text">
+                        <h3>ป้ายโฆษณา</h3>
+                    </div>
+                </a>
+                <a href="/service.html" class="product-item-con">
+                    <div class="product-item-con-image">
+                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg" alt="product-item-1">
+                    </div>
+                    <div class="product-item-con-text">
+                        <h3>ป้ายโฆษณา</h3>
+                    </div>
+                </a>
             </div>
             <div class="button-product" data-aos="zoom-in">
                 <button onclick="window.location.href='/service.html'">ดูสินค้าทั้งหมด</button>
@@ -240,7 +288,7 @@
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
-<script src="/assets/js/model/database.js"></script>
+<!-- <script src="/assets/js/model/database.js"></script> -->
 <script src="/assets/js/index.js"></script>
 <script>
 
