--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                             src="assets/images/495236393_1265238942271289_8009203848911221858_n.jpg" alt=""></div>
                     <div class="banner-image"><img
                             src="assets/images/500407055_1285581083570408_7088848512085273310_n (1).jpg" alt=""></div>
-                    <div class="banner-image"><img
-                            src="assets/images/Hitube_U9ZSz2g8xd_2025_06_10_16_24_58.jpg" alt=""></div>
+                    <div class="banner-image"><img src="assets/images/Hitube_U9ZSz2g8xd_2025_06_10_16_24_58.jpg" alt="">
+                    </div>
                 </div>
             </div>
             <div class="controls">
@@ -96,7 +96,7 @@
         </section>
         <section class="hero-section">
             <div class="hero-content">
-                <div class="hero-text" data-aos="slide-up" data-aos-duration="2000">
+                <div class="hero-text" data-aos="fade-up" data-aos-duration="2000">
                     <h1>U-Design</h1>
                     <div class="subtitle">บริษัท เเอทไซน์ มีเดีย พลัส</div>
                     <p>คุณกำลังมองหาป้ายที่ไม่เหมือนใคร สะท้อนตัวตน หรือเติมเต็มพื้นที่ให้มีสไตล์อยู่หรือเปล่า?
@@ -106,6 +106,10 @@
                         <a href="#section-2" class="btn-primary">
                             <i class="fas fa-eye"></i>
                             ดูผลงาน
+                        </a>
+                        <a href="#section-3" class="btn-secondary">
+                            <i class="fas fa-video"></i>
+                            ดูวิดีโอ
                         </a>
                         <a href="#section-4" class="btn-secondary">
                             <i class="fas fa-phone"></i>
@@ -121,49 +125,55 @@
                 <p>เราให้บริการออกแบบและผลิตป้ายโฆษณาครบวงจร ด้วยคุณภาพและความใส่ใจในทุกรายละเอียด</p>
             </div>
             <div id="product-item" class="product-item">
-                <a href="/service.html" class="product-item-con">
+                <a href="/service.html" class="product-item-con" data-aos="fade-up">
                     <div class="product-item-con-image">
-                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg" alt="product-item-1">
+                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg"
+                            alt="product-item-1">
                     </div>
                     <div class="product-item-con-text">
                         <h3>ป้ายโฆษณา</h3>
                     </div>
                 </a>
-                <a href="/service.html" class="product-item-con">
+                <a href="/service.html" class="product-item-con" data-aos="fade-up">
                     <div class="product-item-con-image">
-                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg" alt="product-item-1">
+                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg"
+                            alt="product-item-1">
                     </div>
                     <div class="product-item-con-text">
                         <h3>ป้ายโฆษณา</h3>
                     </div>
                 </a>
-                <a href="/service.html" class="product-item-con">
+                <a href="/service.html" class="product-item-con" data-aos="fade-up">
                     <div class="product-item-con-image">
-                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg" alt="product-item-1">
+                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg"
+                            alt="product-item-1">
                     </div>
                     <div class="product-item-con-text">
                         <h3>ป้ายโฆษณา</h3>
                     </div>
                 </a>
-                <a href="/service.html" class="product-item-con">
+                <a href="/service.html" class="product-item-con" data-aos="fade-up">
                     <div class="product-item-con-image">
-                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg" alt="product-item-1">
+                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg"
+                            alt="product-item-1">
                     </div>
                     <div class="product-item-con-text">
                         <h3>ป้ายโฆษณา</h3>
                     </div>
                 </a>
-                <a href="/service.html" class="product-item-con">
+                <a href="/service.html" class="product-item-con" data-aos="fade-up">
                     <div class="product-item-con-image">
-                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg" alt="product-item-1">
+                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg"
+                            alt="product-item-1">
                     </div>
                     <div class="product-item-con-text">
                         <h3>ป้ายโฆษณา</h3>
                     </div>
                 </a>
-                <a href="/service.html" class="product-item-con">
+                <a href="/service.html" class="product-item-con" data-aos="fade-up">
                     <div class="product-item-con-image">
-                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg" alt="product-item-1">
+                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg"
+                            alt="product-item-1">
                     </div>
                     <div class="product-item-con-text">
                         <h3>ป้ายโฆษณา</h3>
@@ -185,8 +195,8 @@
                     Your browser does not support the video tag.
                 </video>
             </div>
-            <div class="detail-video" data-aos="fade-up">
-                <p>ไม่ว่าจะเป็นงานเล็กหรืองานใหญ่ เราพร้อมช่วยคุณเปลี่ยนไอเดียให้กลายเป็นความจริง
+            <div class="detail-video">
+                <p data-aos="zoom-in">ไม่ว่าจะเป็นงานเล็กหรืองานใหญ่ เราพร้อมช่วยคุณเปลี่ยนไอเดียให้กลายเป็นความจริง
                     ด้วยงานออกแบบป้ายในสไตล์
                     DIY ที่เน้นความใส่ใจ รายละเอียด
                     และความเป็นเอกลักษณ์เฉพาะตัวทุกชิ้นงานผ่านกระบวนการคิดและออกแบบร่วมกับลูกค้า
@@ -197,8 +207,20 @@
                 </p>
             </div>
         </section>
+        <section id="section-5">
+            <div class="title">
+                <h2 data-aos="fade-up">ยอดผู้เข้าชม</h2>
+                <p data-aos="fade-up">ยอดผู้เข้าชมของเรา</p>
+                <div class="counter-container">
+                    <div class="counter-item">
+                        <div class="counter-number" data-aos="fade-up" data-target="1000">0</div>
+                        <span class="counter-text" data-aos="fade-up">คน</span>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section id="section-4">
-            <div class="title" data-aos="zoom-in">
+            <div class="title" data-aos="fade-up">
                 <h2>ช่องทางการติดต่อ</h2>
                 <p>พร้อมให้คำปรึกษาและบริการคุณ</p>
             </div>
@@ -321,7 +343,6 @@
             this.submit();
         });
     });
-
     ///////////////////////////////////////////
 </script>
 
