--- a/gallery.html
+++ b/gallery.html
@@ -14,6 +14,7 @@
     <title>แกลลอรี่ - U-Dsign</title>
     <link rel="icon" href="/assets/images/iconUdesign.png">
     <link rel="stylesheet" href="assets/css/gallery.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -67,25 +68,47 @@
         <main>
             <div class="main-title">
                 <h1>แกลลอรี่</h1>
-            </div>
-            <!-- หมวดหมู่ -->
-            <div class="nav-menu">
-                <a href="#" class="active" data-category="all">ทั้งหมด</a>
-                <a href="#" data-category="ไวนิว">ไวนิว</a>
-                <a href="#" data-category="สดิกเกอร์">สดิกเกอร์</a>
-                <a href="#" data-category="คอมโพสิท">คอมโพสิท</a>
-                <a href="#" data-category="ดิสเพลย์">ดิสเพลย์</a>
-                <a href="#" data-category="ตัวอักษรมีไฟ">ตัวอักษรมีไฟ</a>
-                <a href="#" data-category="ตัวอักษรไม่มีไฟ">ตัวอักษรไม่มีไฟ</a>
-                <a href="#" data-category="งานอื่นๆ">งานอื่นๆ</a>
-            </div>
+            </div>  
         </main>
 
         <section>
-            <div class="services-container">
-
+            <div class="services-container" id="services-container">
+                <div class="row-image">
+                    <img src="https://scontent.furt1-1.fna.fbcdn.net/v/t39.30808-6/464721200_1771203166960755_1560268196568541235_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeGDYf5M0zG7HilpRNpmwwjWG3usy9kH520be6zL2QfnbeyhRJzt5VqxDNujhiYPMJ91I4rDMWcb0oz_-3yVkRo4&_nc_ohc=veHtYdojHuAQ7kNvwGMixZx&_nc_oc=AdlNR4IBeKI47UXFUkGLS7vgmZfQnMHRcj05tC-0cR1raM_3hBTWLcVjmjgw5rdUjzc&_nc_zt=23&_nc_ht=scontent.furt1-1.fna&_nc_gid=A-oh6MxASpYK3EuMshLUMw&oh=00_AfP3Ztefb6EEED-asxC_QhD_o92c8ump-r-xuH240OE6WA&oe=685821F0" alt="">
+                    <img src="https://quiz.postjung.com/data/66/66674.image1.jpg" alt="">
+                    <img src="https://cdn.readawrite.com/articles/13854/13853693/thumbnail/large.gif?1" alt="">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSuna3TsN24S7SYvPD37MPnOrEec-4ECt4gEw&s" alt="">
+                    <img src="https://i.pinimg.com/236x/12/bb/73/12bb7382bd072e742961b819f7c30d32.jpg" alt="">
+                    <img src="https://i.pinimg.com/474x/cc/38/f6/cc38f6053c5259ad7875a87e90fdc967.jpg" alt="">
+                    <img src="https://us-tuna-sounds-images.voicemod.net/91bdb8d2-486a-4daf-985e-45eddc735eca-1685854320225.jpg" alt="">
+                    <img src="https://cdn.readawrite.com/articles/11649/11648681/thumbnail/large.gif?1" alt="">
+                    <img src="https://www.lemon8-app.com/seo/image?item_id=7335107860579844610&index=1&sign=656b49c0257c62dc2f8c5713180f480e" alt="">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRHihcchK1IUCvCKTRN3akKg_dwz9PJ8iAW4uArpkOAWEvByFUFbI9Chlr7anoRN8-s38k&usqp=CAU" alt="">
+                    <img src="https://static.thairath.co.th/media/B6FtNKtgSqRqbnNsbJaqPSzScMT9erhNTjliOlWxzEbCGVta4anTyXIaTOek6aeH1Qxs8.jpg" alt="">
+                    <img src="https://scontent.furt1-1.fna.fbcdn.net/v/t39.30808-1/473205714_1669045024036971_1637495070923979517_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=108&ccb=1-7&_nc_sid=1d2534&_nc_eui2=AeHmvXMKECnnBVWMUseLrXDpFVX6ocQL3twVVfqhxAve3BJsrG5RdPAjxdGcOE0gLpPdqY-telAOB1_PU1aacwKj&_nc_ohc=Ig3vYSrRejgQ7kNvwGb6Meg&_nc_oc=Admwu5OC0t72zu_3-I_JRuroxjdGz9icOPxaWLl4X9jf0NkR-ESV9BwVfZ9yaD0q2fw&_nc_zt=24&_nc_ht=scontent.furt1-1.fna&_nc_gid=U3a5kHLHRcYtcE8oRo6PPw&oh=00_AfOucgfafw1QB_WmCRkteDIpu6yQp90GoVWZm7zEMySF5Q&oe=68581154" alt="">
+                    <img src="https://scontent.furt1-1.fna.fbcdn.net/v/t39.30808-6/480424513_1695771604697646_1695004656150728010_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=86c6b0&_nc_eui2=AeHldCfeYqNkjng8D0WHEg6nPdQya5MwG_Y91DJrkzAb9t3TfI5ZRRuCJUbwYKv-KFDwn2DrDavbNH9tSJHQ7xus&_nc_ohc=fvs72yez3ScQ7kNvwGNRNSK&_nc_oc=AdmjCGwIjbyS7eKkv2mC30W2sFL9-dWU9W2g_vNiynPCKVLphQW_jAV_OJ1cpyTCqbo&_nc_zt=23&_nc_ht=scontent.furt1-1.fna&_nc_gid=U4g-8Re9SkBEbe9eNaNaJg&oh=00_AfPvMELpvOXcX1XQutFduLXTWJLG92w4hS3eP-UbDHnsoQ&oe=68580F6D" alt="">
+                    <img src="https://scontent.furt1-1.fna.fbcdn.net/v/t39.30808-6/506398229_746366614722939_1408498174549531954_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeGUElzBBsEW4mos_7rCMTpzMVLb4_Y_9boxUtvj9j_1uqFYOHEd2zJAtPrfrAa8Hta4rOnOc8Rp6Arg3sUAC5nF&_nc_ohc=vLUu63jLv4gQ7kNvwH0busW&_nc_oc=AdkE0d2vFyLAvc3pidQ12yT38mZQL1yzy358A4m_AW0pDF6BH-eHE0bmYjb4IoD0e1Q&_nc_zt=23&_nc_ht=scontent.furt1-1.fna&_nc_gid=KZ5HhqcpI9kJn737-fkbBg&oh=00_AfPn1VRFLNUmEfDv9BYCKKGL8V-K2bA4-x7uRg3GBmHvjg&oe=685818B0" alt="">
+                </div>
             </div>
         </section>
+    </div>
+
+    <!-- Image Modal -->
+    <div id="imageModal" class="modal">
+        <span class="close">&times;</span>
+        <div class="zoom-controls">
+            <button class="zoom-btn" id="zoomInBtn">+</button>
+            <button class="zoom-btn" id="zoomOutBtn">−</button>
+            <button class="zoom-btn" id="resetZoomBtn">⟲</button>
+        </div>
+        <img class="modal-content" id="modalImage">
+        <div class="modal-nav">
+            <button class="nav-btn prev-btn" id="prevBtn">&#10094;</button>
+            <button class="nav-btn next-btn" id="nextBtn">&#10095;</button>
+        </div>
+        <div class="modal-info">
+            <span id="imageCounter"></span>
+        </div>
     </div>
 
     <footer>
@@ -151,9 +174,7 @@
             <span>Ⓒ 2025 บริษัท เอทไซน์ มีเดีย พลัส</span>
         </div>
     </footer>
-
-    <script src="assets/js/model/database.js"></script>
-    <script src="assets/js/gallery.js"></script>
 </body>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+<script src="assets/js/gallery.js"></script>
 </html>
