--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
     <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
     <title>ติดต่อเรา - U-Dsign</title>
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="/assets/css/contact.css">
     <link rel="icon" href="/assets/images/iconUdesign.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -92,12 +93,12 @@
                         <p>ยู-ดีไซน์</p>
                     </div>
                 </a>
-                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=printing01@gmail.com.com&su=หัวเรื่อง&body=เนื้อหาอีเมล"
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=U.printing01@gmail.com&su=หัวเรื่อง&body=เนื้อหาอีเมล"
                     target="_blank" class="contact-item">
                     <div class="contact-icon email-icon"></div>
                     <div class="contact-details">
                         <h3>Email</h3>
-                        <p>printing01@gmail.com</p>
+                        <p>U.printing01@gmail.com</p>
                     </div>
                 </a>
                 <a href="https://maps.app.goo.gl/WM2DqQAKvomdmGYR8" target="_blank" class="contact-item">
@@ -107,6 +108,17 @@
                         <p>Google Map</p>
                     </div>
                 </a>
+                <div class="contact-item">
+                    <div class="contact-icon line-icon">
+                        <i class="fa-brands fa-line" style="font-size: 24px; color: #21c20c; transform: scale(2.3);"></i>
+                    </div>
+                    <div class="contact-details">
+                        <h3>Line ID</h3>
+                        <p>u-design1: 0982655479</p>
+                        <p>u-design2: 0887542440</p>
+                        <p>u-design3: 0865193036</p>
+                    </div>
+                </div>
             </div>
             <div class="contact-form">
                 <h1 class="form-head">ติดต่อเรา</h1>
@@ -121,7 +133,6 @@
                     <h3 class="form-subtitle">คลิก</h3>
                 </button>
             </div>
-        
         </div>
     </div>
     <footer>
@@ -189,7 +200,15 @@
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-        AOS.init();
+        AOS.init({
+            duration: 1000,
+            easing: 'ease-in-out',
+            once: true,
+            mirror: false,
+            anchorPlacement: 'top-bottom',
+            offset: 100,
+            delay: 100,
+        });
     </script>
 </body>
 <script src="/assets/js/contact.js"></script>
