--- a/service.html
+++ b/service.html
@@ -100,8 +100,8 @@
     </a>
     <a href="service_detail/service_detail.html" target="_blank">
         <div class="gallery-item" data-category="sticker">
-            <img src="assets/images/491952769_1285203656941484_9153172249648220897_n.jpg"
-                alt="สติ๊กเกอร์ปริ้นติดกระจก" class="gallery-img"">
+            <img src="assets/images/491952769_1285203656941484_9153172249648220897_n.jpg" alt="สติ๊กเกอร์ปริ้นติดกระจก"
+                class="gallery-img"">
                 <div class=" gallery-info">
             <h3>ซีทรู</h3>
         </div>
@@ -109,8 +109,8 @@
     </a>
     <a href="service_detail/service_detail.html" target="_blank">
         <div class="gallery-item" data-category="sticker">
-            <img src="assets/images/491952769_1285203656941484_9153172249648220897_n.jpg"
-                alt="สติ๊กเกอร์ปริ้นติดกระจก" class="gallery-img"">
+            <img src="assets/images/491952769_1285203656941484_9153172249648220897_n.jpg" alt="สติ๊กเกอร์ปริ้นติดกระจก"
+                class="gallery-img"">
                 <div class=" gallery-info">
             <h3>ซีทรู</h3>
         </div>
@@ -118,8 +118,8 @@
     </a>
     <a href="service_detail/service_detail.html" target="_blank">
         <div class="gallery-item" data-category="sticker">
-            <img src="assets/images/491952769_1285203656941484_9153172249648220897_n.jpg"
-                alt="สติ๊กเกอร์ปริ้นติดกระจก" class="gallery-img"">
+            <img src="assets/images/491952769_1285203656941484_9153172249648220897_n.jpg" alt="สติ๊กเกอร์ปริ้นติดกระจก"
+                class="gallery-img"">
                 <div class=" gallery-info">
             <h3>ซีทรู</h3>
         </div>
@@ -127,8 +127,8 @@
     </a>
     <a href="service_detail/service_detail.html" target="_blank">
         <div class="gallery-item" data-category="sticker">
-            <img src="assets/images/491952769_1285203656941484_9153172249648220897_n.jpg"
-                alt="สติ๊กเกอร์ปริ้นติดกระจก" class="gallery-img"">
+            <img src="assets/images/491952769_1285203656941484_9153172249648220897_n.jpg" alt="สติ๊กเกอร์ปริ้นติดกระจก"
+                class="gallery-img"">
                 <div class=" gallery-info">
             <h3>ซีทรู</h3>
         </div>
