--- a/service.html
+++ b/service.html
@@ -80,7 +80,7 @@
 
 
             <!-- สติ๊กเกอร์ -->
-            <a href="service_detail/service_detail_main.html" target="_blank">
+            <a href="service_detail/service_detail_main.html">
                 <div class="gallery-item">
                     <img src="assets/images/491952769_1285203656941484_9153172249648220897_n.jpg" alt="สติ๊กเกอร์ติดรถ"
                         class="gallery-img"">
@@ -89,7 +89,7 @@
                 </div>
         </div>
         </a>
-        <a href="service_detail/service_detail.html" target="_blank">
+        <a href="service_detail/service_detail.html">
             <div class="gallery-item" data-category="sticker">
                 <img src="assets/images/491952769_1285203656941484_9153172249648220897_n.jpg"
                     alt="สติ๊กเกอร์ปริ้นติดกระจก" class="gallery-img"">
@@ -98,7 +98,7 @@
             </div>
     </div>
     </a>
-    <a href="service_detail/service_detail.html" target="_blank">
+    <a href="service_detail/service_detail.html">
         <div class="gallery-item" data-category="sticker">
             <img src="assets/images/491952769_1285203656941484_9153172249648220897_n.jpg" alt="สติ๊กเกอร์ปริ้นติดกระจก"
                 class="gallery-img"">
@@ -107,7 +107,7 @@
         </div>
         </div>
     </a>
-    <a href="service_detail/service_detail.html" target="_blank">
+    <a href="service_detail/service_detail.html">
         <div class="gallery-item" data-category="sticker">
             <img src="assets/images/491952769_1285203656941484_9153172249648220897_n.jpg" alt="สติ๊กเกอร์ปริ้นติดกระจก"
                 class="gallery-img"">
@@ -116,7 +116,7 @@
         </div>
         </div>
     </a>
-    <a href="service_detail/service_detail.html" target="_blank">
+    <a href="service_detail/service_detail.html">
         <div class="gallery-item" data-category="sticker">
             <img src="assets/images/491952769_1285203656941484_9153172249648220897_n.jpg" alt="สติ๊กเกอร์ปริ้นติดกระจก"
                 class="gallery-img"">
@@ -125,7 +125,7 @@
         </div>
         </div>
     </a>
-    <a href="service_detail/service_detail.html" target="_blank">
+    <a href="service_detail/service_detail.html">
         <div class="gallery-item" data-category="sticker">
             <img src="assets/images/491952769_1285203656941484_9153172249648220897_n.jpg" alt="สติ๊กเกอร์ปริ้นติดกระจก"
                 class="gallery-img"">
