เชื่อม banner กับ backend

--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self' https:; script-src 'self' 'unsafe-inline' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' https:; frame-src 'self' https:;">
-    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
     <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
@@ -74,7 +71,7 @@
         <section class="banner-section">
             <div class="banner-wrapper">
                 <div class="banner-content">
-                    <div class="banner-image"><img
+                    <!-- <div class="banner-image"><img
                             src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg" alt=""></div>
                     <div class="banner-image"><img
                             src="assets/images/491952769_1285203656941484_9153172249648220897_n.jpg" alt=""></div>
@@ -85,7 +82,7 @@
                     <div class="banner-image"><img
                             src="assets/images/500407055_1285581083570408_7088848512085273310_n (1).jpg" alt=""></div>
                     <div class="banner-image"><img src="assets/images/Hitube_U9ZSz2g8xd_2025_06_10_16_24_58.jpg" alt="">
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="controls">
